objects/DRT_PTRF_Association__c.object
<CustomObject>
    <fields>
        <fullName>DRT_Name__c</fullName>
        <formula>DRT__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRT_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRT_PTRF_Unique_Identifier__c</fullName>
        <description>This field is populated when Web Service request comes from .Net PTRF</description>
        <label>DRT PTRF Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DRT_Type__c</fullName>
        <formula>TEXT(DRT__r.Type__c)</formula>
        <label>DRT Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DRT associated</description>
        <label>DRT</label>
        <referenceTo>DRT__c</referenceTo>
        <relationshipLabel>DRT PTRF Associations</relationshipLabel>
        <relationshipName>DRT_PTRF_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message_Oracle_DB__c</fullName>
        <label>Error_Message_Oracle_DB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Sync_with_Oracle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Synch With Oracle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Request_Timestamp__c</fullName>
        <label>Last Sync Request Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PTRFNumber__c</fullName>
        <formula>PTRF__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTRFNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTRF_Status__c</fullName>
        <formula>TEXT(PTRF__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTRF Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PTRF associated</description>
        <label>PTRF</label>
        <referenceTo>PTRF__c</referenceTo>
        <relationshipLabel>DRT PTRF Associations</relationshipLabel>
        <relationshipName>DRT_PTRF_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Synced_with_Oracle_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced with Oracle DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Oracle_DB_Sync_Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger_Oracle_DB_Sync_Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate_sgt__c</fullName>
        <formula>LastModifiedDate+1/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>lastmodifieddate_sgt</label>
        <type>DateTime</type>
    </fields>
    <label>DRT PTRF Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DPA-{00000}</displayFormat>
        <label>DRT PTRF Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRT PTRF Associations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>